--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <ul id="list"></ul>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
