--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Shopping List</title>
 </head>
 <body>
     <div class="container">
+        <h1>Lista della spesa</h1>
         <ul id="list"></ul>
     </div>
     <script src="js/main.js"></script>
